--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.5-lts.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.13.0",
+    "react": "^19.0.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
