--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "multer": "^1.4.5-lts.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.13.0",
-    "socket.io": "^4.8.1",
-    "react-scripts":"^3.4.1"
+    "react-scripts": "^3.4.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
