--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.13.0",
     "react": "^18.3.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
